# LumaGBA

./: CMakeLists.txt  LICENSE  Makefile  README.md  compile_gba_linux.sh  compile_gba_win.sh
engine/: engine.c  engine.h  mapex.c  mapex.h  maths.c  maths.h  platform.h  typedefs.h
engine/a5/: allegro5.c  allegro5.h  audio.c  graphics.c  graphics_bitmap.c  graphics_sprite.c  graphics_tiles.c  input.c
engine/gba/: audio.c  gba.c  gba.h  graphics.c  graphics_bitmap.c  graphics_sprite.c  graphics_tiles.c  input.c  network.c
music/: track_0.mod
resources/: 0construct.cmd  0construct.sh  codeentry.c  codeentry.h  codeentry.tmx  completion.c  completion.h  completion.tmx  luma65.tsx  luma_font.c  luma_font.gpl  luma_font.h  luma_gba.tsx  phoenix.tmx  phoenix.tsx  phoenixware.gpl  phoenixware_tiles.c  phoenixware_tiles.h  playarea.c  playarea.h  playarea.tmx  titlescreen.c  titlescreen.h  titlescreen.tmx  titlescreen2.tmx
source/: game.c  game.h  main.c  scrollmap.c  scrollmap.h  stage_codeentry.c  stage_codeentry.h  stage_complete.c  stage_complete.h  stage_level.c  stage_level.h  stage_levelcomplete.c  stage_levelcomplete.h  stage_menu.c  stage_menu.h  stage_phoenix.c  stage_phoenix.h  stage_pmprog.c  stage_pmprog.h  stage_tutorial.c  stage_tutorial.h
